--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+
+# spring.main.web-application-type=none
+server.port=9090
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mariadb://localhost:3306/spring2
+spring.datasource.username=root
+spring.datasource.password=123
+
+spring.jpa.show-sql=true
+
